# Hala-2.0

./: .replit  928846940941209631.json  README.md  core.py  main.py  pyproject.toml  server.py
plugins/: characters.py  help.py  misc.py  music.py  roll.py
