[tool.poetry]
name = "python-template"
version = "0.1.0"
description = "A simple discord bot for D&D."
authors = ["Akins <marley@sufyx.tech>"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.9"
numpy = "^1.22.2"
discord = "^1.7.3"
replit = "^3.2.4"
d20 = "^1.1.2"
googlesearch-python = "^1.1.0"
ffmpeg = "^1.4"
youtube_dl = "^2021.12.17"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
